Alpha v0.02: first pokemon (bulbasaur) taken manually before styling and api usage

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 <body>
     <h3>Welcome to a custom page about Pokemon.</h3>
     <br>
+    <h4>Here you will find custom game data about your favourite little monsters.</h4>
+    <div class="pokemon">
+        <p>#001 Bulbasaur</p>
+        <p>HP: 45</p>
+        <p>Attack: 49</p>
+        <p>Defense: 49</p>
+        <p>Sp. Atk: 65</p>
+        <p>Sp. Def: 65</p>
+        <p>Speed: 45</p>
+    </div>
 </body>
 </html>
