--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h3>Welcome to a custom page about Pokemon.</h3>
@@ -19,5 +20,9 @@
         <p>Sp. Def: 65</p>
         <p>Speed: 45</p>
     </div>
+    <footer>
+        <h6>Created by Virgil Lungu</h6>
+        <h6>Version alpha v0.03</h6>
+    </footer>
 </body>
 </html>
