--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <h4>Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
         <p>#001 Bulbasaur</p>
-        <p>HP: <span></span>45</p>
-        <p>Attack: <span></span> 49</p>
-        <p>Defense: <span></span> 49</p>
-        <p>Sp. Atk: <span></span> 65</p>
-        <p>Sp. Def: <span></span> 65</p>
-        <p>Speed: <span></span> 45</p>
+        <p>HP: 45 <div class="statbar"></div></p>
+        <p>Attack: 49 <div class="statbar"></div> </p>
+        <p>Defense: 49 <div class="statbar"></div> </p>
+        <p>Sp. Atk: 65 <div class="statbar"></div> </p>
+        <p>Sp. Def: 65 <div class="statbar"></div> </p>
+        <p>Speed: 45 <div class="statbar"></div> </p>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.04</h6>
+        <h6>Version alpha v0.05</h6>
     </footer>
 </body>
 </html>
