Alpha v0.06 add color to each bar

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
     <h4>Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
         <p>#001 Bulbasaur</p>
-        <p>HP: 45 <div class="statbar"></div></p>
-        <p>Attack: 49 <div class="statbar"></div> </p>
-        <p>Defense: 49 <div class="statbar"></div> </p>
-        <p>Sp. Atk: 65 <div class="statbar"></div> </p>
-        <p>Sp. Def: 65 <div class="statbar"></div> </p>
-        <p>Speed: 45 <div class="statbar"></div> </p>
+        <p>HP: 45 <div class="statbar" id="hp" style="width: calc(300% * 45/255); height: 20px;
+                                                background-color: red; border: 1px solid red;"></div></p>
+        <p>Attack: 49 <div class="statbar" id="att" style="width: calc(300% * 49/255); height: 20px;
+                                                background-color: orange; border: 1px solid orange;"></div> </p>
+        <p>Defense: 49 <div class="statbar" id="def" style="width: calc(300% * 49/255); height: 20px;
+                                                background-color: blueviolet; border: 1px solid blueviolet;"></div> </p>
+        <p>Sp. Atk: 65 <div class="statbar" id="spa" style="width: calc(300% * 65/255); height: 20px;
+                                                background-color: darkblue; border: 1px solid darkblue;"></div> </p>
+        <p>Sp. Def: 65 <div class="statbar" id="spd" style="width: calc(300% * 65/255); height: 20px;
+                                                background-color: darkgreen; border: 1px solid darkgreen;"></div> </p>
+        <p>Speed: 45 <div class="statbar" id="spe" style="width: calc(300% * 45/255); height: 20px;
+                                                background-color: palevioletred; border: 1px solid palevioletred;"></div> </p>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.05</h6>
+        <h6>Version alpha v0.06</h6>
     </footer>
 </body>
 </html>
