--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <br>
     <h4>Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
-        <p>#001 Bulbasaur</p>
+        <div class="img">
+            <p>#001 Bulbasaur</p>
+            <img src="bulbasaur.webp" a="bulbasaur">
+        </div>  
         <div class="hp"><h4>HP: 45 <div class="statbar" id="hp" style="width: calc(300% * 45/255); height: 20px;
                                                 background-color: red; border: 1px solid red;"></div></h4></div>
         <div class="attack"><h4>Attack: 49 <div class="statbar" id="att" style="width: calc(300% * 49/255); height: 20px;
@@ -28,7 +31,7 @@
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.07</h6>
+        <h6>Version alpha v0.08</h6>
     </footer>
 </body>
 </html>
