--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="img">
             <p>#001 Bulbasaur</p>
             <img src="bulbasaur.webp" a="bulbasaur">
-        </div>  
+        </div>
+        <div class="stats">
         <div class="hp"><h4>HP: 45 <div class="statbar" id="hp" style="width: calc(300% * 45/255); height: 20px;
                                                 background-color: red; border: 1px solid red;"></div></h4></div>
         <div class="attack"><h4>Attack: 49 <div class="statbar" id="att" style="width: calc(300% * 49/255); height: 20px;
@@ -28,10 +29,11 @@
                                                 background-color: darkgreen; border: 1px solid darkgreen;"></div></h4></div>
         <div class="speed"><h4>Speed: 45 <div class="statbar" id="spe" style="width: calc(300% * 45/255); height: 20px;
                                                 background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
+        </div>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.08</h6>
+        <h6>Version alpha v0.09</h6>
     </footer>
 </body>
 </html>
