--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <h3>Welcome to a custom page about Pokemon.</h3>
-    <br>
     <h4>Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
         <div class="img">
@@ -30,10 +29,15 @@
         <div class="speed"><h4>Speed: 45 <div class="statbar" id="spe" style="width: calc(170% * 45/255); height: 20px;
                                                 background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
         </div>
+         <div class="ability">
+            <h3>Ability List</h3>
+            <h4>Primary: Overgrow</h4>
+            <h4>Hidden: Chlorophyll</h4>
+        </div>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.09.2</h6>
+        <h6>Version alpha v0.10</h6>
     </footer>
 </body>
 </html>
