add links to the two abilities

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         </div>
          <div class="ability">
             <h3>Ability List</h3>
-            <h4>Primary: Overgrow</h4>
-            <h4>Hidden: Chlorophyll</h4>
+            <h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)">Overgrow</a></h4>
+            <h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)">Chlorophyll</a></h4>
         </div>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.10</h6>
+        <h6>Version alpha v0.11</h6>
     </footer>
 </body>
 </html>
