--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
             <p>#001 Bulbasaur</p>
             <img src="bulbasaur.webp" a="bulbasaur">
         </div>
+        <div>
+            <div class="typing">
+                <table><tr>
+                    <td style="background-color: darkgreen; color: white;">
+                        <h3>Grass</h3>
+                    </td>
+                    <td style="background-color: rebeccapurple; color: white;">
+                        <h3>Poison</h3>
+                    </td>
+                </tr></table>
+            </div>
+        </div>
         <div class="stats">
         <div class="hp"><h4>HP: 45 <div class="statbar" id="hp" style="width: calc(170% * 45/255); height: 20px;
                                                 background-color: red; border: 1px solid red;"></div></h4></div>
@@ -37,7 +49,7 @@
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.11</h6>
+        <h6>Version alpha v0.12</h6>
     </footer>
 </body>
 </html>
