Alpha v0.12.1 add target

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h3>Welcome to a custom page about Pokemon.</h3>
-    <h4>Here you will find custom game data about your favourite little monsters.</h4>
+    <h4>Welcome to a custom page about Pokemon. Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
         <div class="img">
             <p>#001 Bulbasaur</p>
@@ -43,13 +42,13 @@
         </div>
          <div class="ability">
             <h3>Ability List</h3>
-            <h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)">Overgrow</a></h4>
-            <h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)">Chlorophyll</a></h4>
+            <h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)" target="_blank">Overgrow</a></h4>
+            <h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)" target="_blank">Chlorophyll</a></h4>
         </div>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.12</h6>
+        <h6>Version alpha v0.12.1</h6>
     </footer>
 </body>
 </html>
