Alpha v0.12.2 change font to Poppins

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
             <h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)" target="_blank">Chlorophyll</a></h4>
         </div>
     </div>
+    <div class="nextpoke">
+        <h3>>>> #002 Ivysaur</h3>
+    </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.12.1</h6>
+        <h6>Version alpha v0.12.2</h6>
     </footer>
 </body>
 </html>
