Alpha v0.14 add tooltip to hidden ability Chlorophyll which is banned by Smogon in Little Cup

--- a/index.html
+++ b/index.html
@@ -40,18 +40,25 @@
         <div class="speed"><h4>Speed: 45 <div class="statbar" id="spe" style="width: calc(170% * 45/255); height: 20px;
                                                 background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
         </div>
+
+        <!-- Do the whole Chlorophyll being banned in Gen 8 LC a tooltip.-->
          <div class="ability">
             <h3>Ability List</h3>
-            <h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)" target="_blank">Overgrow</a></h4>
-            <h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)" target="_blank">Chlorophyll</a></h4>
+            <div class="primary"><h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)" target="_blank">Overgrow</a></h4></div>
+            <div class="hidden"><h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)" target="_blank">Chlorophyll
+                <span class="lc"> Banned in Gen 8 Little Cup.</span></a></h4></div>
         </div>
+
+
+
+
     </div>
     <div class="nextpoke">
         <h3>>>> #002 Ivysaur</h3>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.13</h6>
+        <h6>Version alpha v0.14</h6>
     </footer>
 </body>
 </html>
