--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h4>Welcome to a custom page about Pokemon. Here you will find custom game data about your favourite little monsters.</h4>
     <div class="pokemon">
         <div class="img">
             <p>#001 Bulbasaur</p>
@@ -49,16 +48,29 @@
                 <span class="lc"> Banned in Gen 8 Little Cup.</span></a></h4></div>
         </div>
 
-
-
-
     </div>
+
+    <div class="moves">
+        <div class="signature-moves">
+            <table>
+                <tr>
+                    <td>Leech Seed</td>
+                    <td>Vine Whip</td>
+                    <td>Razor Leaf</td>
+                    <td>Solar Beam</td>
+                    <td style="font-weight: 600; text-align: center; font-size: 20px;">Signature Moves</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+
     <div class="nextpoke">
         <h3>>>> #002 Ivysaur</h3>
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.14.1</h6>
+        <h6>Version alpha v0.15</h6>
     </footer>
 </body>
 </html>
