--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                 </tr>
             </table>
         </div>
+        <div class="recommended-moves">
+            <table>
+                <tr>
+                    <td>Sleep Powder</td>
+                    <td>Sludge Bomb</td>
+                    <td>Giga Drain</td>
+                    <td>Synthesis</td>
+                    <td style="font-weight: 600; text-align: center; font-size: 20px;">Recommended Moves</td>
+                </tr>
+            </table>
+        </div>
+
     </div>
 
 
@@ -70,7 +82,7 @@
     </div>
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.15</h6>
+        <h6>Version alpha v0.16</h6>
     </footer>
 </body>
 </html>
