Alpha v0.17: add level of evo to ivysaur

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                                                 background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
         </div>
 
-        <!-- Do the whole Chlorophyll being banned in Gen 8 LC a tooltip.-->
          <div class="ability">
             <h3>Ability List</h3>
             <div class="primary"><h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)" target="_blank">Overgrow</a></h4></div>
@@ -76,13 +75,17 @@
 
     </div>
 
-
+    <!-- Add a bar with the level of evolution -->
     <div class="nextpoke">
         <h3>>>> #002 Ivysaur</h3>
+        <h4>level: 16</h4>
     </div>
+
+
+
     <footer>
         <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.16</h6>
+        <h6>Version alpha v0.17</h6>
     </footer>
 </body>
 </html>
