Moved footer further bottom right

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
 
     <footer>
-        <h6>Created by Virgil Lungu</h6>
-        <h6>Version alpha v0.17</h6>
+        <h6>Created by Virgil Lungu
+        Version alpha v0.17.1</h6>
     </footer>
 </body>
 </html>
