Alpha v0.17.3: added pokemon logo to top-right

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="pokelogo">
+        <img src="poke-logo.png" a="pokelogo">
+    </div>
+
     <div class="pokemon">
         <div class="img">
             <p>#001 Bulbasaur</p>
@@ -85,7 +89,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.17.2</h6>
+        Version alpha v0.17.3</h6>
     </footer>
 </body>
 </html>
