Alpha v0.18: add bulbapedia link to Ivysaur evo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!-- Add a bar with the level of evolution -->
     <div class="nextpoke">
-        <h3>>>> #002 Ivysaur</h3>
+        <h3>>>> <a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">#002 Ivysaur</a></h3>
         <h4>level: 16</h4>
     </div>
 
@@ -89,7 +89,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.17.3</h6>
+        Version alpha v0.18</h6>
     </footer>
 </body>
 </html>
