Add link to national pokedex number

--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
         <h4>level: 16</h4>
     </div>
 
-
+    <!-- Create two new buttons on the right side of the page.-->
+    <div class="pokedex">
+        <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number" 
+        target="_blank">Check out full Pokemon list</a>
+    </div>
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.18</h6>
+        Version alpha v0.18.1</h6>
     </footer>
 </body>
 </html>
