--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     <!-- Create two new buttons on the right side of the page.-->
     <div class="pokedex">
         <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number" 
-        target="_blank">></a>
+        target="_blank" title="Show full Pokemon list">></a>
     </div>
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.18.3</h6>
+        Version alpha v0.18.4</h6>
     </footer>
 </body>
 </html>
