Alpha v0.19: add second button with the whole learnset

--- a/index.html
+++ b/index.html
@@ -91,9 +91,15 @@
         target="_blank" title="Show full Pokemon list">></a>
     </div>
 
+    <div class="moveslist">
+        <a href="https://bulbapedia.bulbagarden.net/wiki/Bulbasaur_(Pok%C3%A9mon)#Learnset" 
+        target="_blank" title="Show moves this Pokemon learns">></a>
+    </div>
+
+
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.18.4</h6>
+        Version alpha v0.19</h6>
     </footer>
 </body>
 </html>
