Alpha v0.2 first edit after first push, small edits

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p>#001 Bulbasaur</p>
             <img src="bulbasaur.webp" a="bulbasaur">
         </div>
+
         <div>
             <div class="typing">
                 <table><tr>
@@ -82,7 +83,7 @@
     <!-- Add a bar with the level of evolution -->
     <div class="nextpoke">
         <h3>>>> <a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">#002 Ivysaur</a></h3>
-        <h4>level: 16</h4>
+        <h4>at level 16</h4>
     </div>
 
     <!-- Create two new buttons on the right side of the page.-->
@@ -99,7 +100,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.19.2</h6>
+        Version alpha v0.2.0</h6>
     </footer>
 </body>
 </html>
