--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
 
     </div>
 
+    <!-- Last Pokemon in the pokedex -->
+    <div class="lastpoke">
+        <h3> <a href="https://bulbapedia.bulbagarden.net/wiki/Enamorus_(Pok%C3%A9mon)" target="_blank"><<< #905 Enamorus</a></h3>
+        <h4>not related</h4>
+    </div>
+
     <!-- Add a bar with the level of evolution -->
     <div class="nextpoke">
-        <h3>>>> <a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">#002 Ivysaur</a></h3>
+        <h3><a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">>>> #002 Ivysaur</a></h3>
         <h4>at level 16</h4>
     </div>
 
@@ -100,7 +106,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.2.0</h6>
+        Version alpha v0.2.1</h6>
     </footer>
 </body>
 </html>
