--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <td>Vine Whip</td>
                     <td>Razor Leaf</td>
                     <td>Solar Beam</td>
-                    <td style="font-weight: 600; text-align: center; font-size: 20px;">Signature Moves</td>
+                    <td style="font-weight: 600; font-size: 22px;">Signature Moves</td>
                 </tr>
             </table>
         </div>
@@ -73,7 +73,7 @@
                     <td>Sludge Bomb</td>
                     <td>Giga Drain</td>
                     <td>Synthesis</td>
-                    <td style="font-weight: 600; text-align: center; font-size: 20px;">Recommended Moves</td>
+                    <td style="font-weight: 600; font-size: 22px;">Recommended Moves</td>
                 </tr>
             </table>
         </div>
@@ -106,7 +106,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.2.1</h6>
+        Version alpha v0.2.2</h6>
     </footer>
 </body>
 </html>
