Redid padding to go 8px all around

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h3>Ability List</h3>
             <div class="primary"><h4>Primary: <a href="https://bulbapedia.bulbagarden.net/wiki/Overgrow_(Ability)" target="_blank">Overgrow</a></h4></div>
             <div class="hidden"><h4>Hidden: <a href="https://bulbapedia.bulbagarden.net/wiki/Chlorophyll_(Ability)" target="_blank">Chlorophyll
-                <span class="lc"> Banned in Gen 8 Little Cup.</span></a></h4></div>
+                <span class="lc"> Banned in SS Little Cup.</span></a></h4></div>
         </div>
 
     </div>
@@ -73,7 +73,7 @@
                     <td>Sludge Bomb</td>
                     <td>Giga Drain</td>
                     <td>Synthesis</td>
-                    <td style="font-weight: 600; font-size: 22px;">Recommended Moves</td>
+                    <td style="font-weight: 600; font-size: 21px;">Recommended Moves</td>
                 </tr>
             </table>
         </div>
@@ -106,7 +106,7 @@
 
     <footer>
         <h6>Created by Virgil Lungu
-        Version alpha v0.2.2</h6>
+        Version alpha v0.2.3</h6>
     </footer>
 </body>
 </html>
