Added links to Smogon for types and transition property

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div class="typing">
                 <table><tr>
                     <td style="background-color: darkgreen; color: white;">
-                        <h3>Grass</h3>
+                        <h3><a href="https://www.smogon.com/dex/ss/types/grass/" target="_blank">Grass</a></h3>
                     </td>
                     <td style="background-color: rebeccapurple; color: white;">
-                        <h3>Poison</h3>
+                        <h3><a href="https://www.smogon.com/dex/ss/types/poison/" target="_blank">Poison</a></h3>
                     </td>
                 </tr></table>
             </div>
@@ -105,8 +105,8 @@
 
 
     <footer>
-        <h6>Created by Virgil Lungu
-        Version alpha v0.2.3</h6>
+        <h6 style="white-space: pre-line">Created by Virgil Lungu
+        Version alpha v0.2.4</h6>
     </footer>
 </body>
 </html>
