--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
         </div>
         <div class="stats">
             <div class="hp"><h4>HP: 45 <span class="maxhp">at level 100: 294</span>
-                        <div class="statbar" id="hp" style="width: calc(170% * 45/255); height: 20px; background-color: red; border: 1px solid red;"> 
-                        </div></h4></div>
-            <div class="attack"><h4>Attack: 49 <div class="statbar" id="att" style="width: calc(170% * 49/255); height: 20px;
-                                                background-color: orange; border: 1px solid orange;"></div></h4></div>  
-            <div class="defense"><h4>Defense: 49 <div class="statbar" id="def" style="width: calc(170% * 49/255); height: 20px;
-                                                background-color: blueviolet; border: 1px solid blueviolet;"></div></h4></div>
-            <div class="specialattack"><h4>Sp. Atk: 65 <div class="statbar" id="spa" style="width: calc(170% * 65/255); height: 20px;
-                                                background-color: darkblue; border: 1px solid darkblue;"></div></h4></div>
-            <div class="specialdefense"><h4>Sp. Def: 65 <div class="statbar" id="spd" style="width: calc(170% * 65/255); height: 20px;
-                                                background-color: darkgreen; border: 1px solid darkgreen;"></div></h4></div>
-            <div class="speed"><h4>Speed: 45 <div class="statbar" id="spe" style="width: calc(170% * 45/255); height: 20px;
-                                                background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
+                        <div class="statbar" id="hp" style="width: calc(170% * 45/255); height: 20px; 
+                        background-color: red; border: 1px solid red;"></div></h4></div>
+            <div class="attack"><h4>Attack: 49 <span class="maxatk">at level 100: 216</span>
+                        <div class="statbar" id="att" style="width: calc(170% * 49/255); height: 20px;
+                        background-color: orange; border: 1px solid orange;"></div></h4></div>  
+            <div class="defense"><h4>Defense: 49 <span class="maxdef">at level 100: 216</span>
+                        <div class="statbar" id="def" style="width: calc(170% * 49/255); height: 20px;
+                        background-color: blueviolet; border: 1px solid blueviolet;"></div></h4></div>
+            <div class="specialattack"><h4>Sp. Atk: 65 <span class="maxspa">at level 100: 251</span>
+                        <div class="statbar" id="spa" style="width: calc(170% * 65/255); height: 20px;
+                        background-color: darkblue; border: 1px solid darkblue;"></div></h4></div>
+            <div class="specialdefense"><h4>Sp. Def: 65 <span class="maxspd">at level 100: 251</span>
+                        <div class="statbar" id="spd" style="width: calc(170% * 65/255); height: 20px;
+                        background-color: darkgreen; border: 1px solid darkgreen;"></div></h4></div>
+            <div class="speed"><h4>Speed: 45 <span class="maxspe">at level 100: 216</span>
+                        <div class="statbar" id="spe" style="width: calc(170% * 45/255); height: 20px;
+                        background-color: palevioletred; border: 1px solid palevioletred;"></div> </h4></div>
         </div>
 
         <div class="ability">
@@ -107,7 +112,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.2.7</h6>
+        Version alpha v0.2.8</h6>
     </footer>
 </body>
 </html>
