Alpha v0.2.9: add target blank to all move links

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <div class="signature-moves">
             <table>
                 <tr>
-                    <td>Leech Seed</td>
-                    <td>Vine Whip</td>
-                    <td>Razor Leaf</td>
-                    <td>Solar Beam</td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/leech-seed/" target="_blank">Leech Seed</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/vine-whip/" target="_blank">Vine Whip</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/razor-leaf/" target="_blank">Razor Leaf</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/solar-beam/" target="_blank">Solar Beam</a></td>
                     <td style="font-weight: 600; font-size: 22px;">Signature Moves</td>
                 </tr>
             </table>
@@ -75,10 +75,10 @@
         <div class="recommended-moves">
             <table>
                 <tr>
-                    <td>Sleep Powder</td>
-                    <td>Sludge Bomb</td>
-                    <td>Giga Drain</td>
-                    <td>Synthesis</td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/sleep-powder/" target="_blank">Sleep Powder</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/sludge-bomb/" target="_blank">Sludge Bomb</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/giga-drain/" target="_blank">Giga Drain</a></td>
+                    <td><a href="https://www.smogon.com/dex/ss/moves/synthesis/" target="_blank">Synthesis</a></td>
                     <td style="font-weight: 600; font-size: 21px;">Recommended Moves</td>
                 </tr>
             </table>
@@ -112,7 +112,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.2.8</h6>
+        Version alpha v0.2.9</h6>
     </footer>
 </body>
 </html>
