Alpha v0.3.0: create new html to work with poke api

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- Create two new buttons on the right side of the page.-->
     <div class="pokedex">
-        <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number" 
+        <a href="pokedex.html" 
         target="_blank" title="Show full Pokemon list">></a>
     </div>
 
@@ -112,7 +112,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.2.10</h6>
+        Version alpha v0.3.0</h6>
     </footer>
 </body>
 </html>
