Alpha v0.3.1: create first table prototype

--- a/pokedex.html
+++ b/pokedex.html
@@ -9,5 +9,15 @@
 </head>
 <body>
     Placeholder for pokedex using pokeapi
+
+    <div class="pokedex-pokelist">
+        <table>
+            <tr>
+                <td>#001 Bulbasaur</td>
+                <td>Grass/Poison</td>
+                <td>Level 16</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
