Alpha v0.3.2: console logged pokedex api

--- a/pokedex.html
+++ b/pokedex.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeDex</title>
     <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    Placeholder for pokedex using pokeapi
-
+    
     <div class="pokedex-pokelist">
         <table>
             <tr>
                 <td>#001 Bulbasaur</td>
                 <td>Grass/Poison</td>
-                <td>Level 16</td>
+                <td>Overgrow</td>
+                <td>Chlorophyll</td>
+                <td>evolution: level 16</td>
             </tr>
         </table>
     </div>
