Alpha v0.3.4: added search button and moved poke logo in the top left

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <img src="poke-logo.png" a="pokelogo">
     </div>
 
+    <div class="topnav">
+        <input type="text" placeholder="Search..">
+    </div> 
+
     <div class="pokemon">
         <div class="img">
             <p>#001 Bulbasaur</p>
@@ -112,7 +116,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.3.2</h6>
+        Version alpha v0.3.4</h6>
     </footer>
 </body>
 </html>
