Alpha v0.3.5: add event listener and console log the pokemon by the pokedex number

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="pokelogo">
@@ -13,7 +14,7 @@
     </div>
 
     <div class="topnav">
-        <input type="text" placeholder="Search..">
+        <input id="pokenav" type="text" placeholder="Search..">
     </div> 
 
     <div class="pokemon">
@@ -116,7 +117,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.3.4</h6>
+        Version alpha v0.3.5</h6>
     </footer>
 </body>
 </html>
