Alpha v.0.3.6: added media query. Removed poke logo and placed search box in the center

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <img src="poke-logo.png" a="pokelogo">
     </div>
 
-    <div class="topnav">
+    <!-- Add search bootstrap -->
+    <div class="search">
         <input id="pokenav" type="text" placeholder="Search..">
     </div> 
 
@@ -117,7 +118,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.3.5</h6>
+        Version alpha v0.3.6</h6>
     </footer>
 </body>
 </html>
