Alpha v0.3.7: completed media query show for index.html page.

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
     <!-- Last Pokemon in the pokedex -->
     <div class="lastpoke">
-        <h3> <a href="https://bulbapedia.bulbagarden.net/wiki/Enamorus_(Pok%C3%A9mon)" target="_blank"><<< #905 Enamorus</a></h3>
+        <h3> <a href="https://bulbapedia.bulbagarden.net/wiki/Enamorus_(Pok%C3%A9mon)" target="_blank">#905 Enamorus</a></h3>
         <h4>not related</h4>
     </div>
 
     <!-- Add a bar with the level of evolution -->
     <div class="nextpoke">
-        <h3><a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">>>> #002 Ivysaur</a></h3>
+        <h3><a href="https://bulbapedia.bulbagarden.net/wiki/Ivysaur_(Pok%C3%A9mon)" target="_blank">#002 Ivysaur</a></h3>
         <h4>at level 16</h4>
     </div>
 
@@ -118,7 +118,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.3.6</h6>
+        Version alpha v0.3.7</h6>
     </footer>
 </body>
 </html>
