Alpha v0.3.10b: deleted pokedex.js, will not require node.js and mongodb for now.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Welcome</title>
     <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
+    <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script>
 </head>
 <body>
     <div class="pokelogo">
@@ -21,7 +22,7 @@
     <div class="pokemon">
         <div class="img">
             <p>#001 Bulbasaur</p>
-            <img src="bulbasaur.webp" a="bulbasaur">
+            <img src="bulbasaur.webp" a="bulbasaur" id="bulbasaur">
         </div>
 
         <div>
@@ -118,7 +119,7 @@
 
     <footer>
         <h6 style="white-space: pre-line">Created by Virgil Lungu
-        Version alpha v0.3.10a</h6>
+        Version alpha v0.3.10b</h6>
     </footer>
 </body>
 </html>
